<resources>

    <string name="app_name">点菜宝</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tip_not_login">您尚未登录！</string>
    
    <!-- 登录对话框 -->
    <string name="login">登录</string>
    <string name="wrong_password">密码错误</string>
    <string name="Login_failed">登录失败</string>
    <string name="user_name_error">用户名不能为空</string>
    
    <!-- 询问是否注销对话框 -->
    <string name="message_logout">您确认要注销吗？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    
    <!-- 开台 -->
    <string name="order">点餐</string>
    <string name="ordered">已点</string>
    <string name="dish_name">菜品名称</string>
    <string name="price">单价</string>
    <string name="count">数量</string>
    <string name="remark">备注</string>
    <string name="no_remark">暂无备注</string>
    <string name="check">勾选</string>
    <string name="input_keywords_please">请输入关键字</string>
    <string name="total_price">总价</string>
    <string name="yuan">元</string>
    <string name="submit">下单</string>
    <string name="message_delete_dish">是否删除这道菜？</string>
    <string name="message_submit">是您确认要下单吗？</string>
    <string name="submit_failed">下单失败</string>
    <string name="submit_success">下单成功！</string>
    <string name="no_order">您尚未点餐</string>
    <string name="clear_Table">清台</string>
    
    <!-- 选桌子对话框 -->
    <string name="choose_table_table_nonentity_error">桌子不存在</string>
    <string name="choose_table_customer_number_error">顾客人数错误</string>

    <!-- 设置 -->
    <string name="settings">设置</string>
    <string name="ip">IP</string>
    <string name="input_ip">请输入IP:</string>
    <string name="noNet">无网络模式</string>
    <string name="check_noNet">勾选开启无网络模式</string>

    <!--桌况 -->
    <string name="table_name">桌名</string>
    <string name="table_status">状态</string>
    <string name="empty">空闲</string>
    <string name="occupied">已用</string>
    <string name="submitted">已下单</string>
    <string name="message_exit_order">您确认要放弃点餐吗？</string>
    <string name="change_table">更换桌子</string>
    <string name="message_change_table">您确认要更换桌子吗？</string>
    <string name="message_change_table_success">换桌成功！</string>
    
    <!-- 开台对话框 -->
    <string name="message_open_table">您确认要开台吗？</string>
    
    <!-- 清台对话框 -->
    <string name="message_clear_table">您确认要清台吗？</string>
    <string name="message_clear_table_finish">清台成功！</string>
    
    <!-- 输入顾客人数对话框 -->
    <string name="message_input_customer_number">请输入顾客人数:</string>
    
    <!-- error -->
    <string name="error_list_user_names_failed">获取用户名列表失败</string>
    <string name="error_list_dishes_failed">获取菜单列表失败</string>
    <string name="error_list_table_info_failed">获取桌况列表失败</string>
    <string name="error_open_table_failed">开台失败</string>
    <string name="error_clear_table_failed">清台失败</string>

</resources>
