<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="85dip"
        android:orientation="vertical"
        android:background="@drawable/bg_dropdown_normal" >
    
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:orientation="horizontal" >
            
            <TextView 
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:gravity="center_vertical"
                android:text="@string/total_price"
                style="@style/Text.large.white" />
            
            <TextView 
                android:id="@+id/tv_total_price"
                android:layout_width="80dip"
                android:layout_height="40dip"
                android:gravity="center"
                android:text="0.0"
                android:textColor="#FF0000"
                style="@style/Text.large" />
            
            <TextView 
                android:layout_width="60dip"
                android:layout_height="40dip"
                android:gravity="center_vertical"
                android:text="@string/yuan"
                style="@style/Text.large.white" />
            
            <Button 
                android:id="@+id/btn_submit_order_confirm"
                android:layout_width="100dip"
                android:layout_height="40dip"
                android:gravity="center"
                android:text="@string/submit_confirm"
                style="@style/Text.normal.white"
                android:background="@drawable/selector_base_button" />
            
        </LinearLayout>

        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:orientation="horizontal" >
        
            <TextView 
                android:id="@+id/tv_dish_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="6"
                android:text="@string/dish_name"
                style="@style/Text.xlarge.white" />
        
            <TextView 
                android:id="@+id/tv_price"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/price"
                style="@style/Text.xlarge.white" />
        
            <TextView 
                android:id="@+id/tv_count"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/count"
                style="@style/Text.xlarge.white" />
            
            <TextView 
                android:id="@+id/tv_remark"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:text="@string/remark"
                style="@style/Text.xlarge.white" />
        
        </LinearLayout>
        
    </LinearLayout>
    
    <ListView
        android:id="@+id/listview_dish"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/bg_dropdown_normal" />

</LinearLayout>