<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="85dip"
        android:orientation="vertical"
        android:background="@drawable/bg_dropdown_normal" >
    
        <SearchView 
            android:id="@+id/searchview_dish"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:iconifiedByDefault="false"
            android:inputType="textFilter"
            android:queryHint="@string/input_keywords_please"
            android:searchSuggestSelection=" ?"
            android:searchSuggestThreshold="1"
            android:includeInGlobalSearch="true"
            android:focusable="false" >
        </SearchView>

        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:orientation="horizontal" >
            
            <TextView 
                android:id="@+id/tv_dish_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="4"
                android:text="@string/dish_name"
                style="@style/Text.xlarge.white" />
            
            <TextView 
                android:id="@+id/tv_price"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/price"
                style="@style/Text.xlarge.white" />
            
            <TextView 
                android:id="@+id/tv_count"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/count"
                style="@style/Text.xlarge.white" />
            
        </LinearLayout>
    </LinearLayout>
    
    <ListView
        android:id="@+id/listview_dish"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/bg_dropdown_normal" />

</LinearLayout>