<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dip"
    android:background="@drawable/bg_main" >
    
    <LinearLayout 
        android:layout_width="306dip"
        android:layout_height="348dip"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/bg_dropdown_pressed" >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_dropdown_pressed" >
            
            <TextView 
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/remark"
                style="@style/Text.xlarge.white" />
            
            <TextView 
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:layout_marginRight="10dip"
                android:gravity="center"
                android:text="@string/check"
                style="@style/Text.xlarge.white" />
            
        </LinearLayout>
        
        <ListView 
            android:id="@+id/listview_dish_note"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >
            
        </ListView>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="306dip"
        android:layout_height="60dip"
        android:layout_marginTop="348dip"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/bg_dropdown_pressed">
        <Button 
            android:id="@+id/btn_confirm"
            android:layout_width="90dip"
            android:layout_height="50dip"
            android:text="@string/confirm"
            style="@style/base_button"/>
        
        <Button 
            android:id="@+id/btn_cancle"
            android:layout_width="90dip"
            android:layout_height="50dip"
            android:layout_marginLeft="15dip"
            android:text="@string/cancel"
            style="@style/base_button"/>
        
    </LinearLayout>

</FrameLayout>