<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="@drawable/bg_main" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip" >

        <CheckedTextView
            android:id="@+id/tv_firstTitle"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order"
            style="@style/Text.xlarge.white"
            android:checked="true"
            android:visibility="gone"
            android:background="@drawable/selector_order_tab" />

        <CheckedTextView
            android:id="@+id/tv_secondTitle"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ordered"
            style="@style/Text.xlarge.white"
            android:visibility="gone"
            android:background="@drawable/selector_order_tab" />
        
        <CheckedTextView
            android:id="@+id/tv_thirdTitle"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/submitted"
            style="@style/Text.xlarge.white"
            android:visibility="gone"
            android:background="@drawable/selector_order_tab" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager_base"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>