<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="384dip"
    android:layout_height="256dip"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_dialog" >
        
    <LinearLayout 
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="10dip"
            android:gravity="center_vertical"
            style="@style/Text.xlarge.white"
            android:text="@string/input_ip" />
        
        <EditText
            android:id="@+id/et_IP"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:layout_marginTop="10dip"
            android:gravity="center_vertical"
            style="@style/Text.normal.white"
            android:background="@drawable/textfield_pressed" />
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:orientation="horizontal" >
        
            <Button 
                android:id="@+id/btn_confirm"
                android:layout_width="90dip"
                android:layout_height="45dip"
                android:text="@string/confirm"
                style="@style/Text.large.white"
                android:background="@drawable/selector_base_button" />
        
            <Button 
                android:id="@+id/btn_cancle"
                android:layout_width="90dip"
                android:layout_height="45dip"
                android:layout_marginLeft="15dip"
                android:text="@string/cancel"
                style="@style/Text.large.white"
                android:background="@drawable/selector_base_button" />
        </LinearLayout>
    
    </LinearLayout>
        
</LinearLayout>