<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dip"
    android:layout_height="190dip"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/bg_dialog" >
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/bg_dropdown_normal" >
    
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/message_input_customer_number"
            style="@style/Text.xlarge.white"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:paddingTop="10dip"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        
        <EditText 
            android:id="@+id/tv_customet_number"
            android:layout_width="180dip"
            android:layout_height="50dip"
            android:background="@drawable/bg_dropdown_normal"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/bg_dropdown_normal" >
    
        <Button 
            android:id="@+id/btn_confirm"
            android:layout_width="90dip"
            android:layout_height="45dip"
            android:text="@string/confirm"
            style="@style/Text.large.white"
            android:background="@drawable/selector_base_button" />
    
        <Button 
            android:id="@+id/btn_cancle"
            android:layout_width="90dip"
            android:layout_height="45dip"
            android:layout_marginLeft="15dip"
            android:text="@string/cancel"
            style="@style/Text.large.white"
            android:background="@drawable/selector_base_button" />
    </LinearLayout>

</LinearLayout>
