<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="@drawable/bg_main">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:orientation="horizontal"
        android:background="@drawable/bg_main" >
        
        <TextView 
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/table_name"
            android:background="@drawable/bg_open_table_title_normal"
            style="@style/Text.xlarge.white" />
        
        <TextView 
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/table_status"
            android:background="@drawable/bg_open_table_title_normal"
            style="@style/Text.xlarge.white" />
            
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <SearchView 
            android:id="@+id/searchview_dish"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:iconifiedByDefault="false"
            android:inputType="textFilter"
            android:queryHint="@string/input_keywords_please"
            android:searchSuggestSelection=" ?"
            android:searchSuggestThreshold="1"
            android:includeInGlobalSearch="true"
            android:focusable="false"
            android:background="@drawable/bg_dropdown_normal"
            style="@style/Text.normal.white" >
        </SearchView>
        
        <ListView 
            android:id="@+id/listview_table_info"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@drawable/bg_dropdown_normal" >
            
        </ListView>
    </LinearLayout>

</LinearLayout>